Añadiendo correcciones menores. Empezando a incorporar distribuciones